# Erre2

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
erre2/: __main__.py
erre2/templates/: dashboard.htm  error.htm  nav.htm  riassunti_list.htm  stampo.htm
erre2/templates/administration/: dashboard.htm  materia.htm  riassunto.htm  update.htm
files/: foo.md
templates/: dashboard.htm  nav.htm  riassunti_list.htm  stampo.htm
templates/administration/: dashboard.htm  materia.htm  riassunto.htm  update.htm
