[tool.poetry]
name = "erre2"
version = "1.1.2"
description = "Un server web scritto in python per raccogliere e gestire riassunti universitari"
authors = ["Lorenzo Balugani <lorenzo.balugani@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask_sqlalchemy = "^2.4.4"
bcrypt = "^3.2.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
